# adventofcode_2021

./: .gitattributes  .gitignore  LICENSE.txt  README.md  notes.md
day01/: Cargo.toml  day1.fs  input.txt
day01/src/: main.rs
day02/: day2.cabal  day2.hs  input.txt
day03/: day3.hs  day3.sml  input.txt
day04/: day4.cabal  day4.hs  input.txt
day05/: LICENSE  day5.cabal  day5.hs  input.txt
day06/: day6.cabal  day6.hs  input.txt
day07/: day7.cabal  day7.hs  input.txt
day08/: day8.cabal  day8.hs  input.txt
day09/: day9.cabal  day9.hs  input.txt
day1/: day1.fs
day10/: day10.sml  input.txt
day11/: day11.cabal  day11.fs  day11.hs  input.txt
day12/: day12.cabal  day12.hs  input.txt
day13/: day13.cabal  day13.hs  input.txt
day14/: day14.cabal  day14.hs  input.txt
day15/: BenchDay15.hs  Day15.hs  Main.hs  day15.cabal  day15.hs  input.txt
day16/: day16.cabal  day16.hs  input.txt
day17/: day17.cabal  day17.hs  input.txt
day18/: day18.cabal  day18.fsx  day18.hs  input.txt
day19/: day19.cabal  day19.hs  input.txt
day20/: day20.cabal  day20.hs  input.txt
day21/: day21.cabal  day21.hs  input.txt
day22/: day22.cabal  day22.hs  input.txt
day23/: day23.cabal  day23.hs  input.txt
day24/: day24.cabal  day24.hs  input.txt
day25/: day25.cabal  day25.hs  input.txt
