cabal-version:      2.4
name:               day2
version:            0.1.0.0

license:            MIT
license-file:       LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

library
    exposed-modules:  Day2

    build-depends:    base ^>=4.14.3.0
                    , QuickCheck
                    , checkers

    hs-source-dirs:   .
    default-language: Haskell2010
