cabal-version:      2.4
name:               day14
version:            0.1.0.0

license:            MIT
license-file:       LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

executable day14
    main-is: day14.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , split

    hs-source-dirs:   .
    default-language: Haskell2010
