cabal-version:      2.4
name:               day15
version:            0.1.0.0

license:            MIT
license-file:       LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

common deps
    build-depends:    array
                    , base ^>=4.14.3.0
                    , containers
                    , psqueues
                    , split

library
    import: deps
    exposed-modules: Day15
    default-language: Haskell2010

executable day15
    import: deps
    main-is: Main.hs
    other-modules: Day15
    default-language: Haskell2010


benchmark bench-day15
    import: deps
    main-is:       BenchDay15.hs
    type:          exitcode-stdio-1.0
    other-modules: Day15
    build-depends: tasty-bench
    ghc-options:  "-with-rtsopts=-A32m"
    default-language: Haskell2010
