cabal-version:      2.4
name:               day21
version:            0.1.0.0

license:            MIT
license-file:       LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

executable day21
    main-is: day21.hs
    build-depends:    base ^>=4.14.3.0,
                      multiset


    hs-source-dirs:   .
    default-language: Haskell2010
